Fix: prevent zooming on input on IOS devices (#356)

--- a/src/mobile/styles/screens/SignInMobileScreen.pcss
+++ b/src/mobile/styles/screens/SignInMobileScreen.pcss
@@ -76,7 +76,7 @@
       font-size: 12px;
 
       input {
-        font-size: 14px;
+        font-size: 16px;
         &::placeholder {
           font-size: 14px;
         }
